language/move-lang/tests/move_check/translated_ir_tests/move/commands/pop_weird.exp
error[E04005]: expected a single type
   ┌─ tests/move_check/translated_ir_tests/move/commands/pop_weird.move:14:9
   │
14 │         (_) = ();
   │         ^^^   -- Expected a single type, but found expression list type: '()'
   │         │      
   │         Invalid type for local

error: 

    ┌── tests/move_check/translated_ir_tests/move/commands/pop_weird.move:13:9 ───
    │
 13 │         (_, _) = ();
    │         ^^^^^^ Invalid value for assignment
    ·
 13 │         (_, _) = ();
    │         ------ The type: '(_, _)'
    ·
 13 │         (_, _) = ();
    │                  -- Is not compatible with: '()'
    │

